# DS-Persist-SmartAuto

./: .gitignore  README.md  divisao_tarefas.txt  requirements.txt  smartauto.db
Modelagem/: Model.puml  README.md
SmartAutoApp/: README.md  entrega01.md  hello.py  pyproject.toml  requirements.txt  smartauto.db
SmartAutoApp/src/: main.py  parse_csv.py
SmartAutoApp/src/database/: database.py  mongo.py  smartauto.db
SmartAutoApp/src/mock/: clientes.json  funcionarios.json  veiculo.json  vendas.json
SmartAutoApp/src/model/: Admin.py  Cliente.py  Endereco.py  Funcionario.py  Gerente.py  Locacao.py  Veiculo.py  Venda.py  Vendedor.py
SmartAutoApp/src/models/: Funcionario.py  categoria.py  cliente.py  endereco.py  funcionario.py  locacao.py  modelo.py  veiculo.py  venda.py
SmartAutoApp/src/models/cliente/: cliente.py  endereco.py
SmartAutoApp/src/routes/: categoria.py  categorias.py  clientes.py  endereco.py  funcionarios.py  locacao.py  locacoes.py  modelos.py  veiculo.py  veiculos.py  vendas.py
SmartAutoApp/src/storage/: clientes.csv  file_handler.py  funcionarios.csv  locacoes.csv  modelos.csv  veiculos.csv  vendas.csv
SmartAutoApp/src/utils/: file_handler.py  hash_handler.py  zip_handler.py
