[project]
name = "smartautoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "motor[srv]>=3.7.0",
    "odmantic>=1.0.2",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.4",
    "sqlmodel>=0.0.22",
]
